--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   html: ^0.14.0+3
   transparent_image: ^1.0.0
   page_transition: ^1.1.5
-  flutter_inappwebview: ^3.3.0+3
+  flutter_inappwebview: ^3.4.0+1
   url_launcher: ^5.4.10
   icon_shadow: ^1.0.1
   shared_preferences: '>=0.5.7+3 <2.0.0'
@@ -39,6 +39,8 @@ dependencies:
   scrollable_positioned_list: ^0.1.6
   uni_links: ^0.4.0
   sentry: ^3.0.1
+  device_info: ^0.4.2+4
+  package_info: ^0.4.1
   flutter:
     sdk: flutter
 
