--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,20 +26,21 @@ dependencies:
   html: ^0.14.0+3
   transparent_image: ^1.0.0
   page_transition: ^1.1.5
-  flutter_inappwebview: ^3.4.0+1
-  url_launcher: ^5.4.10
+  flutter_inappwebview: ^4.0.0+4
+  url_launcher: ^5.5.0
   icon_shadow: ^1.0.1
-  shared_preferences: '>=0.5.7+3 <2.0.0'
+  shared_preferences: '>=0.5.8 <2.0.0'
   flutter_advanced_networkimage: ^0.7.0
-  file_picker: ^1.11.0+2
+  file_picker: ^1.12.0
   ext_storage: ^1.0.3
-  permission_handler: ^5.0.1
+  permission_handler: ^5.0.1+1
   double_back_to_close_app: ^1.2.0
   scrollable_positioned_list: ^0.1.6
   uni_links: ^0.4.0
   sentry: ^3.0.1
-  device_info: ^0.4.2+4
+  device_info: '>=0.4.2+4 <2.0.0'
   package_info: ^0.4.1
+  flutter_user_agent: ^1.2.2
   flutter:
     sdk: flutter
 
