--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   device_info: '>=0.4.2+4 <2.0.0'
   package_info: ^0.4.1
   flutter_user_agent: ^1.2.2
+  path_provider: ^1.6.11
   flutter:
     sdk: flutter
 
