--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,37 +11,40 @@ description: JoyReactor client.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.4.5
+version: 0.5.0
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   video_player:
     git:
       url: https://github.com/AlimZanibekov/plugins.git
-      ref: add_videoplayer_cache
+      ref: videoplayer_headers_cache
       path: packages/video_player/video_player
-  dio: ^3.0.9
-  html: ^0.14.0+3
+  dio: ^3.0.10
+  html: ^0.14.0+4
   transparent_image: ^1.0.0
-  page_transition: ^1.1.5
+  page_transition: ^1.1.7+2
   flutter_inappwebview: ^4.0.0+4
-  url_launcher: ^5.5.0
+  url_launcher: ^5.7.7
   icon_shadow: ^1.0.1
-  shared_preferences: '>=0.5.8 <2.0.0'
-  flutter_advanced_networkimage: ^0.7.0
-  file_picker: ^1.12.0
+  shared_preferences: '>=0.5.12+2 <2.0.0'
+  flutter_advanced_networkimage:
+    git:
+      url: https://github.com/mchome/flutter_advanced_networkimage
   ext_storage: ^1.0.3
   permission_handler: ^5.0.1+1
   double_back_to_close_app: ^1.2.0
-  scrollable_positioned_list: ^0.1.6
+  scrollable_positioned_list: ^0.1.8
   uni_links: ^0.4.0
   sentry: ^3.0.1
-  device_info: '>=0.4.2+4 <2.0.0'
-  package_info: ^0.4.1
+  file_picker: ^2.0.10
+  device_info: '>=0.4.2+9 <2.0.0'
+  package_info: '>=0.4.3 <2.0.0'
   flutter_user_agent: ^1.2.2
-  path_provider: ^1.6.11
+  path_provider: ^1.6.21
+  flutter_local_notifications: ^3.0.0
   flutter:
     sdk: flutter
 
