--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,34 +6,32 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
-  video_player:
+  video_player: # null_safety
     git:
       url: https://github.com/AlimZanibekov/plugins.git
       ref: videoplayer_headers_cache
       path: packages/video_player/video_player
-  dio: ^3.0.10
-  html: ^0.14.0+4
-  flutter_chips_input: ^1.9.5
-  page_transition: ^1.1.7+3
-  flutter_inappwebview: ^4.0.0+4
-  url_launcher: ^5.7.10
-  icon_shadow: ^1.0.1
-  shared_preferences: '>=0.5.12+4 <2.0.0'
-  flutter_advanced_networkimage:
-    git:
-      url: https://github.com/mchome/flutter_advanced_networkimage
-  ext_storage: ^1.0.3
-  permission_handler: ^5.0.1+2
-  double_back_to_close_app: ^1.2.0
-  scrollable_positioned_list: ^0.1.8
-  uni_links: ^0.4.0
-  sentry: ^4.0.0
-  file_picker: ^2.1.6
-  device_info: 1.0.0
-  package_info: '>=0.4.3+2 <2.0.0'
-  flutter_user_agent: ^1.2.2
-  path_provider: ^1.6.24
-  flutter_local_notifications: ^4.0.0
+  dio: ^4.0.0 # null_safety
+  html: ^0.15.0 # null_safety
+  page_transition: ^2.0.2 # null_safety
+  flutter_inappwebview: ^5.3.2 # null_safety
+  url_launcher: ^6.0.4 # null_safety
+  decorated_icon: ^1.2.0 # null_safety
+  shared_preferences: ^2.0.5 # null_safety
+  advanced_image: # null_safety
+    path: /Users/alimzanibekov/AndroidStudioProjects/advanced_image
+  #  ext_storage: ^1.0.3
+  permission_handler: ^8.0.0+1 # null_safety
+  double_back_to_close_app: ^2.0.1 # null_safety
+  scrollable_positioned_list: ^0.2.0-nullsafety.0 # null_safety
+  uni_links: ^0.5.1 # null_safety
+  sentry: ^5.0.0 # null_safety
+  file_picker: ^3.0.1 # null_safety
+  device_info: ^2.0.1 # null_safety
+  package_info: 2.0.0 # null_safety
+  #  flutter_user_agent: ^1.2.2
+  path_provider: ^2.0.1 # null_safety
+  flutter_local_notifications: ^6.0.0 # null_safety
   flutter:
     sdk: flutter
 
