--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,35 +3,33 @@ description: JoyReactor client.
 version: 0.6.0
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  video_player: # null_safety
+  video_player:
     git:
       url: https://github.com/AlimZanibekov/plugins.git
       ref: videoplayer_headers_cache
       path: packages/video_player/video_player
-  dio: ^4.0.0 # null_safety
-  html: ^0.15.0 # null_safety
-  page_transition: ^2.0.2 # null_safety
-  flutter_inappwebview: ^5.3.2 # null_safety
-  url_launcher: ^6.0.4 # null_safety
-  decorated_icon: ^1.2.0 # null_safety
-  shared_preferences: ^2.0.5 # null_safety
-  advanced_image: # null_safety
-    path: /Users/alimzanibekov/AndroidStudioProjects/advanced_image
-  #  ext_storage: ^1.0.3
-  permission_handler: ^8.0.0+1 # null_safety
-  double_back_to_close_app: ^2.0.1 # null_safety
-  scrollable_positioned_list: ^0.2.0-nullsafety.0 # null_safety
-  uni_links: ^0.5.1 # null_safety
-  sentry: ^5.0.0 # null_safety
-  file_picker: ^3.0.1 # null_safety
-  device_info: ^2.0.1 # null_safety
-  package_info: 2.0.0 # null_safety
-  #  flutter_user_agent: ^1.2.2
-  path_provider: ^2.0.1 # null_safety
-  flutter_local_notifications: ^6.0.0 # null_safety
+  dio: ^4.0.0
+  html: ^0.15.0
+  page_transition: ^2.0.2
+  flutter_inappwebview: ^5.3.2
+  url_launcher: ^6.0.6
+  decorated_icon: ^1.2.0
+  shared_preferences: ^2.0.6
+  advanced_image:
+    git: https://github.com/AlimZanibekov/advanced_image.git
+  permission_handler: ^8.0.1
+  double_back_to_close_app: ^2.0.1
+  scrollable_positioned_list: ^0.2.0-nullsafety.0
+  uni_links: ^0.5.1
+  sentry: ^5.0.0
+  file_picker: ^3.0.2+2
+  device_info: ^2.0.2
+  package_info: ^2.0.2
+  path_provider: ^2.0.2
+  flutter_local_notifications: ^6.0.0
   flutter:
     sdk: flutter
 
