--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
+          flutter-version: '2.10.2'
           channel: "stable"
           cache: true
       - run: flutter config --no-analytics
@@ -40,6 +41,7 @@ jobs:
           java-version: "11"
       - uses: subosito/flutter-action@v2
         with:
+          flutter-version: '2.10.2'
           channel: "stable"
           cache: true
       - run: flutter config --no-analytics
