--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: reactor
 description: JoyReactor client.
-version: 0.7.5
+version: 0.7.6
 
 environment:
   sdk: '>=2.14.0 <3.0.0'
@@ -27,11 +27,13 @@ dependencies:
   scrollable_positioned_list: ^0.2.3
   uni_links: ^0.5.1
   sentry: ^6.3.0
-  file_picker: ^4.4.0
+  file_picker: ^4.5.0
   device_info_plus: ^3.2.2
   package_info_plus: ^1.4.0
   path_provider: ^2.0.9
-  flutter_local_notifications: ^9.3.2
+  flutter_local_notifications: ^9.3.3
+  share_plus: ^3.1.0
+
   flutter:
     sdk: flutter
   flutter_localizations:
