Fixed quiz display on long choice string Updated android min sdk version to 22 Fixed bug with image reload button

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,13 +38,10 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    lintOptions {
-        disable 'InvalidPackage'
-    }
 
     defaultConfig {
         applicationId "ru.alimzanibekov.reactor"
-        minSdkVersion 20
+        minSdkVersion 22
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -65,6 +62,9 @@ android {
         release {
             signingConfig signingConfigs.release
         }
+    }
+    lint {
+        disable 'InvalidPackage'
     }
 }
 
