--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: reactor
 description: JoyReactor client.
-version: 0.7.6+2
+version: 0.7.7
 
 environment:
   sdk: '>=2.14.0 <3.0.0'
@@ -32,7 +32,8 @@ dependencies:
   package_info_plus: ^1.4.0
   path_provider: ^2.0.9
   flutter_local_notifications: ^9.3.3
-  share_plus: ^3.1.0
+  share_plus: ^4.0.2
+  mime: ^1.0.1
 
   flutter:
     sdk: flutter
