Update to flutter 3 Https migration Fix issue with links after joyreactor.cc update (links presented on pages without scheme) Rewrite ScheduleBinding calls due to flutter update Fix canLaunch/launch deprecation warnings

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,8 +32,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    compileSdkVersion 33
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -42,8 +41,8 @@ android {
 
     defaultConfig {
         applicationId "ru.alimzanibekov.reactor"
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 17
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
