--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: reactor
 description: JoyReactor client.
-version: 0.7.9
+version: 0.8.0
 
 environment:
   sdk: '>=2.14.0 <3.0.0'
@@ -8,37 +8,38 @@ environment:
 dependencies:
   video_player:
     git:
-      url: https://github.com/AlimZanibekov/plugins.git
+      url: https://github.com/alim-zanibekov/plugins.git
       ref: videoplayer_headers_cache
       path: packages/video_player/video_player
   advanced_image:
     git:
-      url: https://github.com/AlimZanibekov/advanced_image.git
+      url: https://github.com/alim-zanibekov/advanced_image.git
       ref: master
   dio: ^4.0.4
   html: ^0.15.0
-  page_transition: ^2.0.5
-  flutter_inappwebview: ^5.3.2
-  url_launcher: ^6.0.20
+  page_transition: ^2.0.9
+  flutter_inappwebview: ^5.4.3+7
+  url_launcher: ^6.1.4
   decorated_icon: ^1.2.1
-  shared_preferences: ^2.0.13
-  permission_handler: ^9.2.0
+  shared_preferences: ^2.0.15
+  permission_handler: ^10.0.0
   double_back_to_close_app: ^2.1.0
-  scrollable_positioned_list: ^0.2.3
+  scrollable_positioned_list: ^0.3.2
   uni_links: ^0.5.1
-  sentry: ^6.3.0
-  file_picker: ^4.5.0
-  device_info_plus: ^3.2.2
+  sentry: ^6.6.3
+  file_picker: ^4.6.1
+  device_info_plus: ^4.0.0
   package_info_plus: ^1.4.0
-  path_provider: ^2.0.9
-  flutter_local_notifications: ^9.3.3
-  share_plus: ^4.0.2
-  mime: ^1.0.1
+  path_provider: ^2.0.11
+  flutter_local_notifications: ^9.6.1
+  share_plus: ^4.0.10
+  mime: ^1.0.2
 
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+
 dev_dependencies:
   test: ^1.19.5
   flutter_test:
